added featured section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,41 @@
             </div>
          </section>
          <!--teams section end-->
-         <!--feature will enjoy-->
-         <section>
-              
+         <!--features section start-->
+         <section class="features display-flex">
+              <div>
+                 <h3 id="feature-section-title" class="section-title">Features you will <br>love & enjoy</h3>
+                 <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde assumenda laboriosam explicabo eveniet vitae molestiae ipsa fuga qui quaerat.</p>
+                 
+                 <!--feature card container-->
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque velit adipisci a veniam autem distinctio quae recusandae nostrum! Qui, dolorem.
+                    </p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque velit adipisci a veniam autem distinctio quae recusandae nostrum! Qui, dolorem.
+                    </p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque velit adipisci a veniam autem distinctio quae recusandae nostrum! Qui, dolorem.
+                    </p>
+                 </div>
+                 <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque velit adipisci a veniam autem distinctio quae recusandae nostrum! Qui, dolorem.
+                    </p>
+                 </div>
+              </div>
+              <div class="featured-architect">
+                <img src="images/architect.png" alt="">
+                <button id="experience-badge" class="btn-primary">
+                     <span id="experience-year">10+ Years</span><br>
+                     <span>Experience</span>
+                </button>
+              </div>
          </section>
          <!-- some facts-->
           <section class="some-facts">
@@ -80,6 +112,20 @@
                     </div>
                  </div>
             </div>
+          </section>
+          <!--sponsors section-->
+          <section class="our-sponsors">
+             <div class="sopnsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-gray">Lorem ipsum dolor sit amet consectetur, adipisicing elit. In, corrupti!</p>
+             </div>
+             <div class="sponsor-companies">
+                   <img src="images/sponsors/spotify.png" alt="">
+                   <img src="images/sponsors/google.png" alt="">
+                   <img src="images/sponsors/amazon.png" alt="">
+                   <img src="images/sponsors/telerama.png" alt="">
+                   <img src="images/sponsors/figma.png" alt="">
+             </div>
           </section>
     </main>
     <footer>
